# fenex

./: Cargo.toml  Changelog.md  LICENSE  README.md
examples/: promotion_demo.rs
src/: fen.rs  lib.rs
src/chess/: mod.rs
src/chess/board/: board.rs  board_enum.rs  coordinates.rs  fen.rs  fen_notation.rs  game_state.rs  mod.rs  movement.rs  notation.rs
src/chess/piece/: mod.rs  piece.rs  piece_enum.rs
src/chess/piece/types/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/chess/state/: chess_move.rs  game_state.rs  mod.rs  movement.rs
src/chess_board/: algebraic_notation.rs  board.rs  coordinates.rs  fen.rs  fen_notation.rs  mod.rs  move_parser.rs  movement.rs  notation.rs  notation_parser.rs
src/chess_piece/: chess_piece.rs  mod.rs  piece.rs  piece_enum.rs
src/chess_piece/pieces/: bishop.rs  bishop_piece.rs  king.rs  king_piece.rs  knight.rs  knight_piece.rs  mod.rs  pawn.rs  pawn_piece.rs  queen.rs  queen_piece.rs  rook.rs  rook_piece.rs
tests/: fen_test.rs  fenex_test.rs  fenix_test.rs  fenx_test.rs
