[package]
name = "fenex"
version = "0.1.3"
edition = "2021"
authors = ["Small San", "DefinitelyNotSmallSan@gmail.com"]
readme = "README.md"
repository = "https://github.com/Smallsan/fenex"
description = "A rust library for parsing and handling FEN and algebraic chess notations."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fenex"
crate-type = ["lib"]

[[test]]
name = "fenex_test"
path = "tests/fenex_test.rs"


[dependencies]


